--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -91,7 +91,7 @@
 
 
 \title{\bf Selection of Regression Models under Linear Restrictions for Fixed and Random Designs}
-\author{Sen Tian\footnote{E-mail: stian@stern.nyu.edu} \quad Clifford M. Hurvich  \quad Jeffrey S. Simonoff \\\\
+\author{Sen Tian\footnote{E-mail: st1864@stern.nyu.edu} \quad Clifford M. Hurvich  \quad Jeffrey S. Simonoff \\\\
   Department of Technology, Operations, and Statistics, \\Stern School of Business, New York University.}
 \date{}
 \maketitle
